--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab1_new C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(lab1_new main.c complexNum.c stdMath.c myVector.c menu.c)
+add_executable(lab1_new main.c complexNum.c stdMath.c myVector.c menu.c tests.c)
